syntax = "proto3";
package m2g.pb;

enum AttributeType {
    NO_ATTRIBUTE = 0;

    ATTRIBUTE_LINEAR_SPEED = 1;
    ATTRIBUTE_ANGULAR_ACCURACY = 2;
    ATTRIBUTE_AVERAGE_DAMAGE = 3;
    ATTRIBUTE_DAMAGE_ACCURACY = 4;
    ATTRIBUTE_AVERAGE_TTL = 5;
    ATTRIBUTE_TTL_ACCURACY = 6;
}
